ja-source/docusaurus-plugin-content-docs/version-3.x/sql-manual/sql-functions/scalar-functions/date-time-functions/timestampdiff.md
---
{
  "title": "TIMESTAMPDIFF",
  "description": "timestampdiff関数は2つの日付間の差を計算するために使用され、それらの間の時間間隔を返します。",
  "language": "ja"
}
---
## 説明

`timestampdiff`関数は、2つの日付間の差を計算し、それらの間の時間間隔を返すために使用されます。差は指定された時間単位（秒、分、時間、日、月、年など）で返すことができます。

## 構文

`TIMESTAMPDIFF(<unit>, <datetime_expr1>, <datetime_expr2>)`

## パラメータ

| パラメータ | 説明                                                                                                                  |
| -- |------------------------------------------------------------------------------------------------------------------------------|
| `unit` | 時間単位、差を返す単位を指定します。SECOND、MINUTE、HOUR、DAY、MONTH、QUARTER、YEARをサポートします |

:::tip 
QUARTERはバージョン3.0.8および3.1.0以降でサポートされています。
:::
| `datetime_expr1` | 最初のdatetime、有効な対象日付                                                                                     |
| `datetime_expr2` | 2番目のdatetime、有効な対象日付                                                                        |

## 戻り値

戻り値は2つの日時間の差であり、単位はunitパラメータによって決定されます。

入力パラメータが無効な場合、`NULL`が返されます。

## 例

```sql
SELECT TIMESTAMPDIFF(MONTH,'2003-02-01','2003-05-01');
```
```text
+--------------------------------------------------------------------+
| timestampdiff(MONTH, '2003-02-01 00:00:00', '2003-05-01 00:00:00') |
+--------------------------------------------------------------------+
|                                                                  3 |
+--------------------------------------------------------------------+
```
```sql
SELECT TIMESTAMPDIFF(QUARTER,'2002-05-01','2001-01-01');
```
```text
+--------------------------------------------------+
| TIMESTAMPDIFF(QUARTER,'2002-05-01','2001-01-01') |
+--------------------------------------------------+
|                                               -5 |
+--------------------------------------------------+
```
```sql
SELECT TIMESTAMPDIFF(YEAR,'2002-05-01','2001-01-01');
```
```text
+-------------------------------------------------------------------+
| timestampdiff(YEAR, '2002-05-01 00:00:00', '2001-01-01 00:00:00') |
+-------------------------------------------------------------------+
|                                                                -1 |
+-------------------------------------------------------------------+
```
```sql
SELECT TIMESTAMPDIFF(MINUTE,'2003-02-01','2003-05-01 12:05:55');
```
```text
+---------------------------------------------------------------------+
| timestampdiff(MINUTE, '2003-02-01 00:00:00', '2003-05-01 12:05:55') |
+---------------------------------------------------------------------+
|                                                              128885 |
+---------------------------------------------------------------------+
```
```sql
SELECT  TIMESTAMPDIFF(MINUTE,'2003-02-01','1196440219');
```
```text
+-----------------------------------------------------------------------------------+
| timestampdiff(MINUTE, '2003-02-01 00:00:00', CAST('1196440219' AS datetimev2(6))) |
+-----------------------------------------------------------------------------------+
|                                                                              NULL |
+-----------------------------------------------------------------------------------+
```
